Add model method, test, and update show view to include average snack price

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -2,7 +2,9 @@
 
 <h3>Snacks</h3>
 <ul>
-  <% @machine.snacks.each do |snack| %>
+  <% @snacks.each do |snack| %>
   <li> <%= snack.name %>: <%=number_to_currency(snack.price) %> </li>
   <% end %>
 </ul>
+
+<h3>Average Price: <%=number_to_currency(@snacks.avg_price)%></h3>
